# slack-etl

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  db.py  export.py  launchd_gen.py  main.py  md.py  models.py  notifier.py  pyproject.toml  slack_client.py
tests/: conftest.py  test_db.py  test_e2e.py  test_export.py  test_main.py  test_slack_client.py
